src/objects/pse__Permission_Control_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>pse__Allow_Limited_Exp_Report_Edit_Post_Submt__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether a user can update a limited set of field (see white list fields) when a record has been submitted but before it has been approved. This is useful in cases where managers need to approve records but shouldn&apos;t have entry permission for resources.</description>
        <inlineHelpText>Whether a user can update a limited set of field (see white list fields) when a record has been submitted but before it has been approved. This is useful in cases where managers need to approve records but shouldn&apos;t have entry permission for resources.</inlineHelpText>
        <label>Allow Limited Exp Report Edit Post Submt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Allow_Limited_Expense_Entry_Post_Submit__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether a user can update a limited set of field (see white list fields) when a record has been submitted but before it has been approved. This is useful in cases where managers need to approve records but shouldn&apos;t have entry permission for resources.</description>
        <inlineHelpText>Whether a user can update a limited set of field (see white list fields) when a record has been submitted but before it has been approved. This is useful in cases where managers need to approve records but shouldn&apos;t have entry permission for resources.</inlineHelpText>
        <label>Allow Limited Expense Entry Post Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Allow_Limited_TC_Header_Edit_Post_Submit__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether a user can update a limited set of field (see white list fields) when a record has been submitted but before it has been approved. This is useful in cases where managers need to approve records but shouldn&apos;t have entry permission for resources.</description>
        <inlineHelpText>Whether a user can update a limited set of field (see white list fields) when a record has been submitted but before it has been approved. This is useful in cases where managers need to approve records but shouldn&apos;t have entry permission for resources.</inlineHelpText>
        <label>Allow Limited TC Header Edit Post Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Default_Record_Limit__c</fullName>
        <defaultValue>1000</defaultValue>
        <inlineHelpText>Maximum number of records to evaluate permission controls against. This limits the number of queries against contact records during evaluation of permission controls. If your org contains a large number of active resources you may have to increase this.</inlineHelpText>
        <label>Default Record Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Exp_Report_Field_White_List_Post_Submit__c</fullName>
        <description>A comma-delimited list of field names that are allowed to be edited by anyone once a record is submitted but before it&apos;s approved.</description>
        <inlineHelpText>A comma-delimited list of field names that are allowed to be edited by anyone once a record is submitted but before it&apos;s approved.</inlineHelpText>
        <label>Exp Report Field White List Post Submit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Exp_Rpt_PSE_Field_White_List_Post_Smt__c</fullName>
        <description>A comma-delimited list of field names that are allowed to be edited by anyone once a record is submitted but before it&apos;s approved.</description>
        <inlineHelpText>A comma-delimited list of field names that are allowed to be edited by anyone once a record is submitted but before it&apos;s approved.</inlineHelpText>
        <label>Exp Rpt PSE Field White List Post Smt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Field_White_List_Post_Submit__c</fullName>
        <description>A comma-delimited list of field names that are allowed to be edited by anyone once a record is submitted but before it&apos;s approved.</description>
        <inlineHelpText>A comma-delimited list of field names that are allowed to be edited by anyone once a record is submitted but before it&apos;s approved.</inlineHelpText>
        <label>Expense Field White List Post Submit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Expense_PSE_Field_White_List_Post_Submit__c</fullName>
        <label>Expense PSE Field White List Post Submit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__TC_Header_Field_White_List_Post_Submit__c</fullName>
        <description>A comma-delimited list of field names that are allowed to be edited by anyone once a record is submitted but before it&apos;s approved.</description>
        <inlineHelpText>A comma-delimited list of field names that are allowed to be edited by anyone once a record is submitted but before it&apos;s approved.</inlineHelpText>
        <label>TC Header Field White List Post Submit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__TC_Header_PSE_Field_White_List_Post_Smt__c</fullName>
        <description>A comma-delimited list of field names that are allowed to be edited by anyone once a record is submitted but before it&apos;s approved.</description>
        <inlineHelpText>A comma-delimited list of field names that are allowed to be edited by anyone once a record is submitted but before it&apos;s approved.</inlineHelpText>
        <label>TC Header PSE Field White List Post Smt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Permission Control Settings</label>
</CustomObject>